Working again, minor changes to each screen